minio_sample/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: etms-minio
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 5
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: etms-minio
  template:
    metadata:
      labels:
        app: etms-minio
        bg: CPBG
        env: dev
        fin_ibg: 1TF000
        fin_ibu: ARMWHQeRFDM
        project: etms
        team: erfdm
      annotations:
        owner: Peter_YH_Chang@wistron.com
    spec:
      containers:
      - args:
        - server
        - '--address'
        - 0.0.0.0:9000
        - '--console-address'
        - 0.0.0.0:9001
        - /data
        name: etms-minio
        image: minio/minio:RELEASE.2022-09-17T00-09-45Z
        imagePullPolicy: Always
        ports:
        - name: api      # 命名端口以利 Service 引用
          containerPort: 9000
          protocol: TCP
        - name: console  # MinIO Console/Browser 端口
          containerPort: 9001
          protocol: TCP
        resources:
          limits:
            cpu: 512m
            memory: 512Mi
          requests:
            cpu: 256m
            memory: 256Mi
        securityContext:
          runAsUser: 1000
          runAsGroup: 3000
          runAsNonRoot: true
          allowPrivilegeEscalation: false
        stdin: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        tty: true
        volumeMounts:
        - name: vol1
          mountPath: /data # MinIO 儲存物件的地方
      dnsConfig: {}
      dnsPolicy: ClusterFirst
      hostname: etms-minio
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      volumes:
      - name: vol1
        persistentVolumeClaim:
          claimName: etms-minio-data-pvc # 引用數據 PVC
